--- a/index.html
+++ b/index.html
@@ -61,13 +61,12 @@
   </main>
   <!-- FINE MAIN -->
     
-  
-  <!-- SECTION FOOTER  -->
   <footer>
 
+    <!-- SECTION FOOTER  -->
   </footer>
   
-    
+    <!-- TRE DIV  -->
 
   </body>
 </html>
