first-template-home/section

--- a/index.html
+++ b/index.html
@@ -1,59 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://kit.fontawesome.com/228474511d.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./assets/css/reset.css">
-    <link rel="stylesheet" href="./assets/css/master.css">
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Document</title>
-  </head>
-  <body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="https://kit.fontawesome.com/228474511d.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="./assets/css/reset.css">
+  <link rel="stylesheet" href="./assets/css/master.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
+  <title>Document</title>
+</head>
+
+<body>
+  <section id="home">
     <!-- HEADER  -->
+    <header>
+      <!-- BACKGROUND IMAGE - CSS -->
+      <!-- LOGO + NAVBAR -->
 
-   
-    <!-- BACKGROUND IMAGE  -->
-    <!-- LOGO + NAVBAR -->
-
+      <nav>
+        <img src="./assets/images/logo.png" alt="LOGO">
+        <ul id="myLinks">
+          <li><a href="">HOME</a></li>
+          <li><a href="">ABOUT US</a></li>
+          <li><a href="">BLOG</a></li>
+          <li><a href="">MENU</a></li>
+          <li><a href="">NEWS</a></li>
+          <li><a href="">CONTACTS</a></li>
+        </ul>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+          <i class="fa-solid fa-bars"></i>
+        </a>
+      </nav>
+    </header>
     <!-- FINE HEADER  -->
-
-
-
-
     <!-- MAIN -->
-
-    <!-- SECTION CAROSELLO -->
-
-    <!-- SECTION ABOUT US -->
-
-    <!-- SECTION BLOG  -->
-    <!-- DIV MADRE -->
-    <!-- BACKGROUND IMAGE -->
-    <!-- SEI DIV  -->
-    <!-- BUTTON -->
-
-    <!-- SECTION MENU -->
-    <!--  DUE DIV  -->
-    <!-- BUTTON -->
-
-    <!-- SECTION NEWS -->
-    <!-- BACKGROUND IMAGE  -->
-    <!-- UN DIV  -->
-
-    <!-- SECTION CONTACTS  -->
-    <!-- FIELDSET  -->
-    <!-- INPUT  -->
-    <!-- BUTTON  -->
-
-     <!-- FINE MAIN -->
+    <main>
+      <!-- SECTION CAROSELLO -->
+      <h3>FEATURED <span>WORKS</span></h3>
+      <div id="featured"></div>
+  </section>
 
 
 
 
-    <!-- SECTION FOOTER  -->
-    <!-- TRE DIV  -->
 
-  </body>
+
+
+  <!-- SECTION ABOUT US -->
+
+  <!-- SECTION BLOG  -->
+  <!-- DIV MADRE -->
+  <!-- BACKGROUND IMAGE -->
+  <!-- SEI DIV  -->
+  <!-- BUTTON -->
+
+  <!-- SECTION MENU -->
+  <!--  DUE DIV  -->
+  <!-- BUTTON -->
+
+  <!-- SECTION NEWS -->
+  <!-- BACKGROUND IMAGE  -->
+  <!-- UN DIV  -->
+
+  <!-- SECTION CONTACTS  -->
+  <!-- FIELDSET  -->
+  <!-- INPUT  -->
+  <!-- BUTTON  -->
+  </main>
+  <!-- FINE MAIN -->
+
+
+
+
+  <!-- SECTION FOOTER  -->
+  <!-- TRE DIV  -->
+  <script src="./assets/Js/script.js"></script>
+</body>
+
 </html>
