--- a/index.html
+++ b/index.html
@@ -38,8 +38,22 @@
     <!-- MAIN -->
     <main>
       <!-- SECTION CAROSELLO -->
-      <h3>FEATURED <span>WORKS</span></h3>
-      <div id="featured"></div>
+      <div id="carousel">
+        <h3>FEATURED <span>WORKS</span></h3>
+        <button class="arrow next">⇨</button>
+        <div class="carousel">
+          <ul>
+            <li><img src="./assets/images/slider/slider-img-1.jpg" alt="carousel img"></li>
+            <li><img src="./assets/images/slider/slider-img-2.jpg" alt="carousel img"></li>
+            <li><img src="./assets/images/slider/slider-img-3.jpg" alt="carousel img"></li>
+            <li><img src="./assets/images/slider/slider-img-4.jpg" alt="carousel img"></li>
+            <li><img src="./assets/images/slider/slider-img-1.jpg" alt="carousel img"></li>
+            <li><img src="./assets/images/slider/slider-img-2.jpg" alt="carousel img"></li>
+            <li><img src="./assets/images/slider/slider-img-3.jpg" alt="carousel img"></li>
+            <li><img src="./assets/images/slider/slider-img-4.jpg" alt="carousel img"></li>
+          </ul>
+        </div>
+      </div>
   </section>
 
 
