--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <div id="carousel">
         <h3>FEATURED <span>WORKS</span></h3>
         <button class="arrow next">⇨</button>
-        <div class="carousel">
+        <div class="gallery">
           <ul>
             <li><img src="./assets/images/slider/slider-img-1.jpg" alt="carousel img"></li>
             <li><img src="./assets/images/slider/slider-img-2.jpg" alt="carousel img"></li>
