--- a/index.html
+++ b/index.html
@@ -39,8 +39,11 @@
     <main>
       <!-- SECTION CAROSELLO -->
       <div id="carousel">
-        <h3>FEATURED <span>WORKS</span></h3>
-        <button class="arrow next">⇨</button>
+
+        <div id="carousel-title">
+          <h3>FEATURED <span>WORKS</span></h3>
+          <button class="arrow next"><i class="fa fa-angle-right"></i></button>
+        </div>
         <div class="gallery">
           <ul>
             <li><img src="./assets/images/slider/slider-img-1.jpg" alt="carousel img"></li>
