--- a/index.html
+++ b/index.html
@@ -29,8 +29,12 @@
           <li><a href="">NEWS</a></li>
           <li><a href="">CONTACTS</a></li>
         </ul>
-        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+        <!-- <a href="javascript:void(0);" class="icon" onclick="myFunction()"> -->
+        <input type="checkbox" id="check">
+        <label for="check" class="checkbtn">
           <i class="fa-solid fa-bars"></i>
+        </label>
+
         </a>
       </nav>
     </header>
