--- a/index.html
+++ b/index.html
@@ -179,7 +179,6 @@
   <!-- SECTION MENU    -->
   <div id="menu_price">
     <h3 id="menu_price_title">featured <span>on the week</span></h3>
-
     <ul>
       <li>
         <div class="menu_price_item"></div>
@@ -231,8 +230,19 @@
           placeat aut </p>
       </li>
     </ul>
-    <a href="#" id="menu_btn">MORE INFO</a></button>
+    <div id="btn_container">
+     <a href="#" id="menu_btn">MORE INFO</a>
+    </div>
   </div>
+
+  <!-- NEWS SECTION -->
+
+  <div id="news">
+    <div id="news_container">
+      <h2>SUBSCRIBE <span>to our</span> NEWSLETTER</h2>
+    </div>
+  </div>
+
   </main>
   <script src="./assets/Js/script.js"></script>
 </body>
