--- a/index.html
+++ b/index.html
@@ -13,11 +13,8 @@
 </head>
 
 <body>
-  <<<<<<< HEAD <!-- SECTION HOME -->
-    <section id="home">
-      =======
+  <!-- SECTION HOME -->
       <section class="home">
-        >>>>>>> features/home
         <!-- HEADER  -->
         <header>
 
@@ -38,17 +35,16 @@
             </ul>
           </nav>
         </header>
-        <<<<<<< HEAD <!-- MAIN -->
+      <!-- MAIN -->
           <main>
-            <!-- SECTION CAROSELLO -->
-            =======
+          
+  
       </section>
       <!-- FINE HEADER  -->
       <!-- MAIN -->
       <main>
         <!-- SECTION CAROSELLO -->
         <section class="home">
-          >>>>>>> features/home
           <div id="carousel">
 
             <div id="carousel-title">
