cancellati residui merge

--- a/index.html
+++ b/index.html
@@ -174,7 +174,6 @@
   <!-- SECTION MENU    -->
   <div id="menu_price">
     <h3 id="menu_price_title">featured <span>on the week</span></h3>
-    <<<<<<< HEAD=======>>>>>>> features/home
       <ul>
         <li>
           <div class="menu_price_item"></div>
@@ -226,7 +225,7 @@
             placeat aut </p>
         </li>
       </ul>
-      <<<<<<< HEAD <div id="btn_container">
+      <div id="btn_container">
         <a href="#" id="menu_btn">MORE INFO</a>
   </div>
   </div>
@@ -242,7 +241,6 @@
   =======
   <a href="#" id="menu_btn">MORE INFO</a></button>
   </div>
-  >>>>>>> features/home
   </main>
   <script src="./assets/Js/script.js"></script>
 </body>
