--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
 
       <nav>
-        <img src="./assets/images/logo.png" alt="LOGO">
+        <h1 id="title-logo">Restaurant’s</h1>
 
         <input type="checkbox" id="check">
         <label for="check" class="checkbtn">
