--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="./assets/css/reset.css" />
   <link rel="stylesheet" href="./assets/css/master.css" />
   <link rel="stylesheet" href="./assets/css/style.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <title>Document</title>
 </head>
 
@@ -18,7 +20,7 @@
     <header>
 
       <nav>
-        <h1 id="title-logo">Restaurant’s</h1>
+        <h1 id="title-logo">Restaurant's</h1>
 
         <input type="checkbox" id="check">
         <label for="check" class="checkbtn">
@@ -38,198 +40,248 @@
     <!-- MAIN -->
     <main>
       <!-- SECTION CAROSELLO -->
-      <div id="carousel">
+
+      <section class="carousel">
 
         <div id="carousel-title">
           <h3>FEATURED <span>WORKS</span></h3>
           <button class="arrow next"><i class="fa fa-angle-right"></i></button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+            data-bs-slide="next">
+            <span class="visually-hidden">Next</span>
+          </button>
         </div>
-        <div class="gallery">
+
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+              aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+              aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+              aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+              aria-label="Slide 4"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+              aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+              aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+              aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+              aria-label="Slide 4"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+              aria-current="true" aria-label="Slide 1"></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="./assets/images/slider/slider-img-1.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="./assets/images/slider/slider-img-2.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="./assets/images/slider/slider-img-3.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="./assets/images/slider/slider-img-4.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="./assets/images/slider/slider-img-1.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="./assets/images/slider/slider-img-2.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="./assets/images/slider/slider-img-3.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="./assets/images/slider/slider-img-4.jpg" class="d-block w-100" alt="...">
+            </div>
+          </div>
+
+        </div>
+        </>
+        <!-- SECTION ABOUT US -->
+
+        <section id="about-us">
+          <div>
+            <img src="./assets/images/cooker-img.png" alt="">
+            <h1>Your <span>Restaurant’s</span></h1>
+            <h1>Website Has To Look <span>Good</span></h1>
+            <hr>
+            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore magna aliqua. Ut enim
+              ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
+              aute irure dolor in reprehenderit in
+              voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat</p>
+          </div>
+        </section>
+
+        <!-- SECTION BLOG  -->
+        <section id="section-blog">
+          <h1>Latest <span>From</span> the <span>Blog</span></h1>
+          <hr />
+
+          <div class="flex-box">
+
+            <img src="./assets/images/blog/blog-img-1.jpg" alt="blog-img-1" />
+            <div class="layer">
+              <div class="box-description">
+                <h3 class="tophtre">
+                  Homestyle
+                  <h3>
+                    <h3>
+                      Chicken Pot Pie
+                    </h3>
+                    <hr />
+                    <p>Prepared in true New England fash-ion. Tender all-white meat chicken simmered...</p>
+              </div>
+            </div>
+
+            <img src="./assets/images/blog/blog-img-2.jpg" alt="blog-img-2" />
+            <div class="layer">
+              <div class="box-description">
+                <h3>
+                  Homestyle
+                  <h3>
+                    <h3>
+                      Chicken Pot Pie
+                    </h3>
+                    <hr />
+                    <p>Prepared in true New England fash-ion. Tender all-white meat chicken simmered...</p>
+              </div>
+            </div>
+
+            <div class="layer">
+              <div class="box-description">
+                <h3 id="tophtre">
+                  Homestyle
+                  <h3>
+                    <h3>
+                      Chicken Pot Pie
+                    </h3>
+                    <hr />
+                    <p>Prepared in true New England fash-ion. Tender all-white meat chicken simmered...</p>
+              </div>
+            </div>
+            <img class="img-right" src="./assets/images/blog/blog-img-3.jpg" alt="blog-img-3" />
+
+            <div class="layer">
+              <div class="box-description">
+                <h3>
+                  Homestyle
+                  <h3>
+                    <h3>
+                      Chicken Pot Pie
+                    </h3>
+                    <hr />
+                    <p>Prepared in true New England fash-ion. Tender all-white meat chicken simmered...</p>
+              </div>
+            </div>
+            <img class="img-right" src="./assets/images/blog/blog-img-4.jpg" alt="blog-img-4" />
+
+            <img src="./assets/images/blog/blog-img-5.jpg" alt="blog-img-5" />
+            <div class="layer">
+              <div class="box-description">
+                <h3>
+                  Homestyle
+                  <h3>
+                    <h3>
+                      Chicken Pot Pie
+                    </h3>
+                    <hr />
+                    <p>Prepared in true New England fash-ion. Tender all-white meat chicken simmered...</p>
+              </div>
+            </div>
+
+            <img src="./assets/images/blog/blog-img-6.jpg" alt="blog-img-6" />
+            <div class="layer">
+              <div class="box-description">
+                <h3>
+                  Homestyle
+                  <h3>
+                    <h3>
+                      Chicken Pot Pie
+                    </h3>
+                    <hr />
+                    <p>Prepared in true New England fash-ion. Tender all-white meat chicken simmered...</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="section-blog-button">
+            <button><a href="#">MORE INFO</a></button>
+          </div>
+        </section>
+
+        <!-- SECTION MENU    -->
+        <div id="menu_price">
+          <h3 id="menu_price_title">featured <span>on the week</span></h3>
+
           <ul>
-            <li><img src="./assets/images/slider/slider-img-1.jpg" alt="carousel img"></li>
-            <li><img src="./assets/images/slider/slider-img-2.jpg" alt="carousel img"></li>
-            <li><img src="./assets/images/slider/slider-img-3.jpg" alt="carousel img"></li>
-            <li><img src="./assets/images/slider/slider-img-4.jpg" alt="carousel img"></li>
-            <li><img src="./assets/images/slider/slider-img-1.jpg" alt="carousel img"></li>
-            <li><img src="./assets/images/slider/slider-img-2.jpg" alt="carousel img"></li>
-            <li><img src="./assets/images/slider/slider-img-3.jpg" alt="carousel img"></li>
-            <li><img src="./assets/images/slider/slider-img-4.jpg" alt="carousel img"></li>
+            <li>
+              <div class="menu_price_item"></div>
+              <h3>Pancakes n' Such</h3>
+              <div class="bottom_border"></div>
+              <span>$ 25.00</span>
+
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, ad corrupti! Sapiente pariatur ullam
+                dolorum,
+                placeat aut </p>
+            </li>
+            <li>
+              <div class="menu_price_item"></div>
+              <h3>Homestyle Chicken Pot Pie</h3>
+              <div class="bottom_border"></div>
+              <span>$ 10.00</span>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, ad corrupti! Sapiente pariatur ullam
+                dolorum,
+                placeat aut </p>
+            </li>
+            <li>
+              <div class="menu_price_item"></div>
+              <h3>Cereal, Panecillos y Frutas</h3>
+              <div class="bottom_border"></div>
+              <span>$ 5.00</span>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, ad corrupti! Sapiente pariatur ullam
+                dolorum,
+                placeat aut </p>
+            </li>
+            <li>
+              <div class="menu_price_item"></div>
+              <h3>Meat of Skewers</h3>
+              <div class="bottom_border"></div>
+              <span>$ 15.00</span>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, ad corrupti! Sapiente pariatur ullam
+                dolorum,
+                placeat aut </p>
+            </li>
+            <li>
+              <div class="menu_price_item"></div>
+              <h3>Steak with a Garlic and Parsley Risotto</h3>
+              <div class="bottom_border"></div>
+              <span>$ 75.00</span>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, ad corrupti! Sapiente pariatur ullam
+                dolorum,
+                placeat aut </p>
+            </li>
+            <li>
+              <div class="menu_price_item"></div>
+              <h3>Caesar Salad</h3>
+              <div class="bottom_border"></div>
+              <span>$ 7.00</span>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, ad corrupti! Sapiente pariatur ullam
+                dolorum,
+                placeat aut </p>
+            </li>
           </ul>
+          <a href="#" id="menu_btn">MORE INFO</a></button>
         </div>
-      </div>
-  </section>
-  <!-- SECTION ABOUT US -->
-
-  <section id="about-us">
-    <div>
-      <img src="./assets/images/cooker-img.png" alt="">
-      <h1>Your <span>Restaurant’s</span></h1>
-      <h1>Website Has To Look <span>Good</span></h1>
-      <hr>
-      <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-        dolore magna aliqua. Ut enim
-        ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-        aute irure dolor in reprehenderit in
-        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat</p>
-    </div>
-  </section>
-
-  <!-- SECTION BLOG  -->
-  <section id="section-blog">
-    <h1>Latest <span>From</span> the <span>Blog</span></h1>
-    <hr />
-
-    <div class="flex-box">
-
-      <img src="./assets/images/blog/blog-img-1.jpg" alt="blog-img-1" />
-      <div class="layer">
-        <div class="box-description">
-          <h3 class="tophtre">
-            Homestyle
-            <h3>
-              <h3>
-                Chicken Pot Pie
-              </h3>
-              <hr />
-              <p>Prepared in true New England fash-ion. Tender all-white meat chicken simmered...</p>
-        </div>
-      </div>
-
-      <img src="./assets/images/blog/blog-img-2.jpg" alt="blog-img-2" />
-      <div class="layer">
-        <div class="box-description">
-          <h3>
-            Homestyle
-            <h3>
-              <h3>
-                Chicken Pot Pie
-              </h3>
-              <hr />
-              <p>Prepared in true New England fash-ion. Tender all-white meat chicken simmered...</p>
-        </div>
-      </div>
-
-      <div class="layer">
-        <div class="box-description">
-          <h3 id="tophtre">
-            Homestyle
-            <h3>
-              <h3>
-                Chicken Pot Pie
-              </h3>
-              <hr />
-              <p>Prepared in true New England fash-ion. Tender all-white meat chicken simmered...</p>
-        </div>
-      </div>
-      <img class="img-right" src="./assets/images/blog/blog-img-3.jpg" alt="blog-img-3" />
-
-      <div class="layer">
-        <div class="box-description">
-          <h3>
-            Homestyle
-            <h3>
-              <h3>
-                Chicken Pot Pie
-              </h3>
-              <hr />
-              <p>Prepared in true New England fash-ion. Tender all-white meat chicken simmered...</p>
-        </div>
-      </div>
-      <img class="img-right" src="./assets/images/blog/blog-img-4.jpg" alt="blog-img-4" />
-
-      <img src="./assets/images/blog/blog-img-5.jpg" alt="blog-img-5" />
-      <div class="layer">
-        <div class="box-description">
-          <h3>
-            Homestyle
-            <h3>
-              <h3>
-                Chicken Pot Pie
-              </h3>
-              <hr />
-              <p>Prepared in true New England fash-ion. Tender all-white meat chicken simmered...</p>
-        </div>
-      </div>
-
-      <img src="./assets/images/blog/blog-img-6.jpg" alt="blog-img-6" />
-      <div class="layer">
-        <div class="box-description">
-          <h3>
-            Homestyle
-            <h3>
-              <h3>
-                Chicken Pot Pie
-              </h3>
-              <hr />
-              <p>Prepared in true New England fash-ion. Tender all-white meat chicken simmered...</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="section-blog-button">
-      <button><a href="#">MORE INFO</a></button>
-    </div>
-  </section>
-
-  <!-- SECTION MENU    -->
-  <div id="menu_price">
-    <h3 id="menu_price_title">featured <span>on the week</span></h3>
-
-    <ul>
-      <li>
-        <div class="menu_price_item"></div>
-        <h3>Pancakes n' Such</h3>
-        <div class="bottom_border"></div>
-        <span>$ 25.00</span>
-
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, ad corrupti! Sapiente pariatur ullam dolorum,
-          placeat aut </p>
-      </li>
-      <li>
-        <div class="menu_price_item"></div>
-        <h3>Homestyle Chicken Pot Pie</h3>
-        <div class="bottom_border"></div>
-        <span>$ 10.00</span>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, ad corrupti! Sapiente pariatur ullam dolorum,
-          placeat aut </p>
-      </li>
-      <li>
-        <div class="menu_price_item"></div>
-        <h3>Cereal, Panecillos y Frutas</h3>
-        <div class="bottom_border"></div>
-        <span>$ 5.00</span>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, ad corrupti! Sapiente pariatur ullam dolorum,
-          placeat aut </p>
-      </li>
-      <li>
-        <div class="menu_price_item"></div>
-        <h3>Meat of Skewers</h3>
-        <div class="bottom_border"></div>
-        <span>$ 15.00</span>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, ad corrupti! Sapiente pariatur ullam dolorum,
-          placeat aut </p>
-      </li>
-      <li>
-        <div class="menu_price_item"></div>
-        <h3>Steak with a Garlic and Parsley Risotto</h3>
-        <div class="bottom_border"></div>
-        <span>$ 75.00</span>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, ad corrupti! Sapiente pariatur ullam dolorum,
-          placeat aut </p>
-      </li>
-      <li>
-        <div class="menu_price_item"></div>
-        <h3>Caesar Salad</h3>
-        <div class="bottom_border"></div>
-        <span>$ 7.00</span>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, ad corrupti! Sapiente pariatur ullam dolorum,
-          placeat aut </p>
-      </li>
-    </ul>
-    <a href="#" id="menu_btn">MORE INFO</a></button>
-  </div>
-  </main>
-  <script src="./assets/Js/script.js"></script>
+    </main>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"></script>
 </body>
 
 </html>
