--- a/index.html
+++ b/index.html
@@ -84,91 +84,84 @@
     <h1>Latest <span>From</span> the <span>Blog</span></h1>
     <hr />
 
-    <div class="flex-box">
-
-      <img src="./assets/images/blog/blog-img-1.jpg" alt="blog-img-1" />
-      <div class="layer">
-        <div class="box-description">
-          <h3 class="tophtre">
-            Homestyle
-            <h3>
-              <h3>
-                Chicken Pot Pie
-              </h3>
-              <hr />
-              <p>Prepared in true New England fash-ion. Tender all-white meat chicken simmered...</p>
-        </div>
+    <div class="flex-box-blog">
+      <div class="box-img-blog">
+        <img src="./assets/images/blog/blog-img-1.jpg" alt="blog-img-1" />
       </div>
 
-      <img src="./assets/images/blog/blog-img-2.jpg" alt="blog-img-2" />
-      <div class="layer">
-        <div class="box-description">
-          <h3>
-            Homestyle
-            <h3>
-              <h3>
-                Chicken Pot Pie
-              </h3>
-              <hr />
-              <p>Prepared in true New England fash-ion. Tender all-white meat chicken simmered...</p>
-        </div>
+      <div class="box-description-blog">
+        <h3>
+          Homestyle <br class="br-blog"> Chicken Pot Pie
+        </h3>
+        <hr />
+        <p>Prepared in true New England fash-ion. Tender all-white meat chicken simmered...</p>
       </div>
 
-      <div class="layer">
-        <div class="box-description">
-          <h3 id="tophtre">
-            Homestyle
-            <h3>
-              <h3>
-                Chicken Pot Pie
-              </h3>
-              <hr />
-              <p>Prepared in true New England fash-ion. Tender all-white meat chicken simmered...</p>
-        </div>
-      </div>
-      <img class="img-right" src="./assets/images/blog/blog-img-3.jpg" alt="blog-img-3" />
 
-      <div class="layer">
-        <div class="box-description">
-          <h3>
-            Homestyle
-            <h3>
-              <h3>
-                Chicken Pot Pie
-              </h3>
-              <hr />
-              <p>Prepared in true New England fash-ion. Tender all-white meat chicken simmered...</p>
-        </div>
-      </div>
-      <img class="img-right" src="./assets/images/blog/blog-img-4.jpg" alt="blog-img-4" />
 
-      <img src="./assets/images/blog/blog-img-5.jpg" alt="blog-img-5" />
-      <div class="layer">
-        <div class="box-description">
-          <h3>
-            Homestyle
-            <h3>
-              <h3>
-                Chicken Pot Pie
-              </h3>
-              <hr />
-              <p>Prepared in true New England fash-ion. Tender all-white meat chicken simmered...</p>
-        </div>
+      <div class="box-img-blog">
+        <img src="./assets/images/blog/blog-img-2.jpg" alt="blog-img-2" />
       </div>
 
-      <img src="./assets/images/blog/blog-img-6.jpg" alt="blog-img-6" />
-      <div class="layer">
-        <div class="box-description">
-          <h3>
-            Homestyle
-            <h3>
-              <h3>
-                Chicken Pot Pie
-              </h3>
-              <hr />
-              <p>Prepared in true New England fash-ion. Tender all-white meat chicken simmered...</p>
-        </div>
+      <div class="box-description-blog">
+        <h3>
+          Homestyle <br class="br-blog"> Chicken Pot Pie
+        </h3>
+        <hr />
+        <p>Prepared in true New England fash-ion. Tender all-white meat chicken simmered...</p>
       </div>
+
+
+      <div class="box-description-blog-sx">
+        <h3 class="tophtre">
+          Homestyle <br class="br-blog"> Chicken Pot Pie
+        </h3>
+        <hr />
+        <p>Prepared in true New England fash-ion. Tender all-white meat chicken simmered...</p>
+      </div>
+
+      <div class="box-img-blog">
+        <img src="./assets/images/blog/blog-img-3.jpg" alt="blog-img-3" />
+      </div>
+
+
+      <div class="box-description-blog-sx">
+        <h3>
+          Homestyle <br class="br-blog"> Chicken Pot Pie
+        </h3>
+        <hr />
+        <p>Prepared in true New England fash-ion. Tender all-white meat chicken simmered...</p>
+      </div>
+
+      <div class="box-img-blog">
+        <img src="./assets/images/blog/blog-img-4.jpg" alt="blog-img-4" />
+      </div>
+
+      <div class="box-img-blog">
+        <img src="./assets/images/blog/blog-img-5.jpg" alt="blog-img-5" />
+      </div>
+
+      <div class="box-description-blog">
+        <h3>
+          Homestyle <br class="br-blog"> Chicken Pot Pie
+        </h3>
+        <hr />
+        <p>Prepared in true New England fash-ion. Tender all-white meat chicken simmered...</p>
+      </div>
+
+      <div class="box-img-blog">
+        <img src="./assets/images/blog/blog-img-6.jpg" alt="blog-img-6" />
+      </div>
+
+      <div class="box-description-blog">
+        <h3>
+          Homestyle <br class="br-blog"> Chicken Pot Pie
+        </h3>
+        <hr />
+        <p>Prepared in true New England fash-ion. Tender all-white meat chicken simmered...</p>
+      </div>
+
+
     </div>
 
     <div class="section-blog-button">
