--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
   </section>
 
   <!-- SECTION MENU    -->
-  <div id="menu_price">
+  <section id="menu_price">
 
     <div id="menu_container">
       <h2>our <span>MENU</span> the <span>PRICE</span></h2>
@@ -211,11 +211,11 @@
     <div class="btn_container">
      <a href="#" id="menu_btn">MORE INFO</a>
     </div>
-  </div>
+  </section>
 
   <!-- NEWS SECTION -->
 
-  <div id="news">
+  <section id="news">
     <div id="news_container">
       <h2>SUBSCRIBE <span>to our</span> NEWSLETTER</h2>
       <hr>
@@ -229,7 +229,27 @@
         </div>
       </div>
     </div>
-  </div>
+  </section>
+
+  <!-- CONTACT US SECTION -->
+
+  <section id="contacts">
+    <div id="contacts_heading">
+    <h2>our <span>CONTACT US</span> </h2>
+     <hr>
+     <h3>SIGN UP FOR <span>EMAIL ALERTS</span></h3>
+    </div>
+
+    <div id="form">
+     <input type="text" name="name" id="input_name" placeholder="Write your full name here...">
+     <input type="email" name="email" id="input_email" placeholder="Write your email address here...">
+     <textarea name="text" id="text_area" cols="30" rows="10" placeholder="Write your message here..."></textarea>
+    </div>
+     
+    <button type="submit">SEND YOUR MESSAGE</button>
+
+  </section>
+
 
   </div>
   </main>
