--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <script src="https://kit.fontawesome.com/228474511d.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="./assets/css/reset.css" />
   <link rel="stylesheet" href="./assets/css/master.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="./assets/css/style.css" />
   <title>Document</title>
 </head>
@@ -169,40 +171,60 @@
 
     <div id="menu_container">
       <h2>our <span>MENU</span> the <span>PRICE</span></h2>
-       <hr>
-       <p id="block_p">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nam id, delectus unde minima modi officiis iure omnis illum porro voluptates aspernatur autem dolorem itaque obcaecati non inventore maxime excepturi quam.</p>
+      <hr>
+      <p id="block_p">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nam id, delectus unde minima modi
+        officiis iure omnis illum porro voluptates aspernatur autem dolorem itaque obcaecati non inventore maxime
+        excepturi quam.</p>
 
     </div>
 
     <h3 id="menu_price_title">featured <span>on the week</span></h3>
-    <ul>
+    <ul id="menu_list">
       <li>
-        <h3>Pancakes n' Such<span>$ 25.00</span><div class="bottom_border"></div></h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi autem ex suscipit explicabo ea in minus velit enim. Debitis ullam consectetur natus quo ratione</p>
+        <h3>Pancakes n' Such<span>$ 25.00</span>
+          <div class="bottom_border"></div>
+        </h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi autem ex suscipit explicabo ea in minus velit
+          enim. Debitis ullam consectetur natus quo ratione</p>
       </li>
       <li>
-        <h3>Homestyle Chicken Pot Pie<span>$ 10.00</span><div class="bottom_border"></div></h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi autem ex suscipit explicabo ea in minus velit enim. Debitis ullam consectetur natus quo ratione</p>
+        <h3>Homestyle Chicken Pot Pie<span>$ 10.00</span>
+          <div class="bottom_border"></div>
+        </h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi autem ex suscipit explicabo ea in minus velit
+          enim. Debitis ullam consectetur natus quo ratione</p>
       </li>
       <li>
-        <h3>Cereal, Panecillos y Frutas<span>$ 5.00</span><div class="bottom_border"></div></h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi autem ex suscipit explicabo ea in minus velit enim. Debitis ullam consectetur natus quo ratione</p>
+        <h3>Cereal, Panecillos y Frutas<span>$ 5.00</span>
+          <div class="bottom_border"></div>
+        </h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi autem ex suscipit explicabo ea in minus velit
+          enim. Debitis ullam consectetur natus quo ratione</p>
       </li>
       <li>
-        <h3>Meat of Skewers<span>$ 15.00</span><div class="bottom_border"></div></h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi autem ex suscipit explicabo ea in minus velit enim. Debitis ullam consectetur natus quo ratione</p>
+        <h3>Meat of Skewers<span>$ 15.00</span>
+          <div class="bottom_border"></div>
+        </h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi autem ex suscipit explicabo ea in minus velit
+          enim. Debitis ullam consectetur natus quo ratione</p>
       </li>
       <li>
-        <h3>Steak with a Garlic and Parsley Risotto<span>$ 75.00</span><div class="bottom_border"></div></h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi autem ex suscipit explicabo ea in minus velit enim. Debitis ullam consectetur natus quo ratione</p>
+        <h3>Steak with a Garlic and Parsley Risotto<span>$ 75.00</span>
+          <div class="bottom_border"></div>
+        </h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi autem ex suscipit explicabo ea in minus velit
+          enim. Debitis ullam consectetur natus quo ratione</p>
       </li>
       <li>
-        <h3>Caesar Salad<span>$ 7.00</span><div class="bottom_border"></div></h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi autem ex suscipit explicabo ea in minus velit enim. Debitis ullam consectetur natus quo ratione</p>
+        <h3>Caesar Salad<span>$ 7.00</span>
+          <div class="bottom_border"></div>
+        </h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi autem ex suscipit explicabo ea in minus velit
+          enim. Debitis ullam consectetur natus quo ratione</p>
       </li>
     </ul>
     <div class="btn_container">
-     <a href="#" id="menu_btn">MORE INFO</a>
+      <a href="#" id="menu_btn">MORE INFO</a>
     </div>
   </section>
 
@@ -216,7 +238,7 @@
 
       <div id="news_form">
         <input type="email" placeholder="Enter your email to subscribe...">
-      
+
         <div id="news_btn_container">
           <button type="submit">SUBSCRIBE</button>
         </div>
@@ -228,25 +250,25 @@
 
   <section id="contacts">
     <div id="contacts_heading">
-    <h2>our <span>CONTACT US</span> </h2>
-     <hr>
-     <h3>SIGN UP FOR <span>EMAIL ALERTS</span></h3>
+      <h2>our <span>CONTACT US</span> </h2>
+      <hr>
+      <h3>SIGN UP FOR <span>EMAIL ALERTS</span></h3>
     </div>
 
     <div id="form">
-     <input type="text" name="name" id="input_name" placeholder="Write your full name here...">
-     <input type="email" name="email" id="input_email" placeholder="Write your email address here...">
-     <textarea name="text" id="text_area" cols="30" rows="10" placeholder="Write your message here..."></textarea>
+      <input type="text" name="name" id="input_name" placeholder="Write your full name here...">
+      <input type="email" name="email" id="input_email" placeholder="Write your email address here...">
+      <textarea name="text" id="text_area" cols="30" rows="10" placeholder="Write your message here..."></textarea>
     </div>
-     
+
     <button type="submit">SEND YOUR MESSAGE</button>
 
   </section>
-
-
   </div>
   </main>
-  <script src="./assets/Js/script.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
