--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
     </div>
 
     <h3 id="menu_price_title">featured <span>on the week</span></h3>
-    <ul>
+    <ul id="menu_list">
       <li>
         <h3>Pancakes n' Such<span>$ 25.00</span><div class="bottom_border"></div></h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi autem ex suscipit explicabo ea in minus velit enim. Debitis ullam consectetur natus quo ratione</p>
