--- a/index.html
+++ b/index.html
@@ -246,7 +246,9 @@
      <textarea name="text" id="text_area" cols="30" rows="10" placeholder="Write your message here..."></textarea>
     </div>
      
-    <button type="submit">SEND YOUR MESSAGE</button>
+    <div id="contact_btn_container">
+     <button type="submit">SEND YOUR MESSAGE</button>
+    </div>
 
   </section>
 
