--- a/index.html
+++ b/index.html
@@ -307,8 +307,10 @@
           <input type="email" name="email" id="input_email" placeholder="Write your email address here...">
           <textarea name="text" id="text_area" cols="30" rows="10" placeholder="Write your message here..."></textarea>
         </div>
-
+         
+        <div id="contact_btn_container">
         <button type="submit">SEND YOUR MESSAGE</button>
+        </div>
 
       </section>
     </main>
