SECTION BLOG : HTML CSS RESPONSIVE completato

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
       <div class="box-description-blog">
         <h3>
-          Homestyle <br class="br-blog"> Chicken Pot Pie
+          Homestyle <br class="br-blog"> Chicken <br class="br-blog-due">Pot Pie
         </h3>
         <hr />
         <p>Prepared in true New England fash-ion. Tender all-white meat chicken simmered...</p>
@@ -105,7 +105,7 @@
 
       <div class="box-description-blog">
         <h3>
-          Homestyle <br class="br-blog"> Chicken Pot Pie
+          Homestyle <br class="br-blog"> Chicken<br class="br-blog-due">Pot Pie
         </h3>
         <hr />
         <p>Prepared in true New England fash-ion. Tender all-white meat chicken simmered...</p>
@@ -114,7 +114,7 @@
 
       <div class="box-description-blog-sx">
         <h3 class="tophtre">
-          Homestyle <br class="br-blog"> Chicken Pot Pie
+          Homestyle <br class="br-blog"> Chicken <br class="br-blog-due">Pot Pie
         </h3>
         <hr />
         <p>Prepared in true New England fash-ion. Tender all-white meat chicken simmered...</p>
@@ -127,7 +127,7 @@
 
       <div class="box-description-blog-sx">
         <h3>
-          Homestyle <br class="br-blog"> Chicken Pot Pie
+          Homestyle <br class="br-blog"> Chicken <br class="br-blog-due">Pot Pie
         </h3>
         <hr />
         <p>Prepared in true New England fash-ion. Tender all-white meat chicken simmered...</p>
@@ -143,7 +143,7 @@
 
       <div class="box-description-blog">
         <h3>
-          Homestyle <br class="br-blog"> Chicken Pot Pie
+          Homestyle <br class="br-blog"> Chicken <br class="br-blog-due"> Pot Pie
         </h3>
         <hr />
         <p>Prepared in true New England fash-ion. Tender all-white meat chicken simmered...</p>
@@ -155,7 +155,7 @@
 
       <div class="box-description-blog">
         <h3>
-          Homestyle <br class="br-blog"> Chicken Pot Pie
+          Homestyle <br class="br-blog"> Chicken<br class="br-blog-due"> Pot Pie
         </h3>
         <hr />
         <p>Prepared in true New England fash-ion. Tender all-white meat chicken simmered...</p>
