--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="./assets/css/style.css" />
+  <link rel="stylesheet" href="./assets/css/home.css">
   <title>Document</title>
 </head>
 
@@ -23,7 +24,7 @@
         <h1 id="title-logo">Restaurant's</h1>
 
         <input type="checkbox" id="check">
-        <label for="check" class="checkbtn">
+        <label for="check" class="checkbtn-nav">
           <i class="fa-solid fa-bars"></i>
         </label>
         <ul>
