--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
               aria-label="Slide 4"></button>
 
           </div>
-          <div class="carousel-inner container-flex-carousel">
+          <div class="carousel-inner ">
             <div class="carousel-item active">
               <img src="./assets/images/slider/slider-img-1.jpg" class="d-block w-100" alt="...">
             </div>
@@ -98,6 +98,26 @@
             <div class="carousel-item">
               <img src="./assets/images/slider/slider-img-4.jpg" class="d-block w-100" alt="...">
             </div>
+          </div>
+
+        </div>
+
+      </section>
+      <section id="carousel-query">
+
+        <div id="container-flex-carousel">
+
+          <div class="carousel-item-flex">
+            <img src="./assets/images/slider/slider-img-1.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item-flex">
+            <img src="./assets/images/slider/slider-img-2.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item-flex">
+            <img src="./assets/images/slider/slider-img-3.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item-flex">
+            <img src="./assets/images/slider/slider-img-4.jpg" class="d-block w-100" alt="...">
           </div>
 
         </div>
