MODIFICA MEDIA QUERY

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h1 id="title-logo">Restaurant's</h1>
 
         <input type="checkbox" id="check">
-        <label for="check" class="checkbtn">
+        <label for="check" class="checkbtn-nav">
           <i class="fa-solid fa-bars"></i>
         </label>
         <ul>
@@ -72,7 +72,7 @@
               aria-label="Slide 4"></button>
 
           </div>
-          <div class="carousel-inner container-flex-carousel">
+          <div class="carousel-inner ">
             <div class="carousel-item active">
               <img src="./assets/images/slider/slider-img-1.jpg" class="d-block w-100" alt="...">
             </div>
@@ -100,7 +100,28 @@
           </div>
 
         </div>
+
       </section>
+      <section id="carousel-query">
+
+        <div id="container-flex-carousel">
+
+          <div class="carousel-item-flex">
+            <img src="./assets/images/slider/slider-img-1.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item-flex">
+            <img src="./assets/images/slider/slider-img-2.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item-flex">
+            <img src="./assets/images/slider/slider-img-3.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item-flex">
+            <img src="./assets/images/slider/slider-img-4.jpg" class="d-block w-100" alt="...">
+          </div>
+
+        </div>
+      </section>
+
       <!-- SECTION ABOUT US -->
 
       <section id="about-us">
