--- a/index.html
+++ b/index.html
@@ -43,26 +43,22 @@
 
         <div id="carousel-title">
           <h3>FEATURED <span>WORKS</span></h3>
-          <a class="next " onclick="plusSlides(1)"><i class="fa fa-angle-right"></i></a>
+          <button class="next " onclick="plusSlides(1)"><i class="fa fa-angle-right"></i></button>
         </div>
 
         <div class="mySlides fade">
-          <div class="numbertext">1 / 4</div>
           <img src="./assets/images/slider/slider-img-1.jpg">
         </div>
 
         <div class="mySlides fade">
-          <div class="numbertext">2 / 4</div>
           <img src="./assets/images/slider/slider-img-2.jpg">
         </div>
 
         <div class="mySlides fade">
-          <div class="numbertext">3 / 4</div>
           <img src="./assets/images/slider/slider-img-3.jpg">
         </div>
 
         <div class="mySlides fade">
-          <div class="numbertext">4 / 4</div>
           <img src="./assets/images/slider/slider-img-4.jpg">
         </div>
       </div>
@@ -84,7 +80,6 @@
         <div class="container-slides-query">
 
           <div class="mySlides-query fade">
-            <div class="numbertext">1 / 4</div>
             <img src="./assets/images/slider/slider-img-1.jpg">
             <img src="./assets/images/slider/slider-img-2.jpg">
           </div>
@@ -92,19 +87,16 @@
 
 
           <div class="mySlides-query fade">
-            <div class="numbertext">2 / 4</div>
             <img src="./assets/images/slider/slider-img-3.jpg">
             <img src="./assets/images/slider/slider-img-4.jpg">
           </div>
 
           <div class="mySlides-query fade">
-            <div class="numbertext">3 / 4</div>
             <img src="./assets/images/slider/slider-img-1.jpg">
             <img src="./assets/images/slider/slider-img-2.jpg">
           </div>
 
           <div class="mySlides-query fade">
-            <div class="numbertext">4 / 4</div>
             <img src="./assets/images/slider/slider-img-3.jpg">
             <img src="./assets/images/slider/slider-img-4.jpg">
           </div>
