--- a/index.html
+++ b/index.html
@@ -111,6 +111,41 @@
         </div>
       </div>
 
+      <div class="slideshow-container-query-bis">
+
+        <div id="carousel-title">
+          <h3>FEATURED <span>WORKS</span></h3>
+          <button class="next " onclick="plusSlidesQueryBis(1)"><i class="fa fa-angle-right"></i></button>
+        </div>
+        <div class="container-slides-query-bis">
+
+          <div class="mySlides-query-bis fade">
+            <img src="./assets/images/slider/slider-img-1.jpg">
+            <img src="./assets/images/slider/slider-img-2.jpg">
+            <img src="./assets/images/slider/slider-img-3.jpg">
+            <img src="./assets/images/slider/slider-img-4.jpg">
+          </div>
+
+
+
+          <div class="mySlides-query-bis fade">
+            <img src="./assets/images/slider/slider-img-1.jpg">
+            <img src="./assets/images/slider/slider-img-2.jpg">
+            <img src="./assets/images/slider/slider-img-3.jpg">
+            <img src="./assets/images/slider/slider-img-4.jpg">
+          </div>
+
+        </div>
+        <br>
+
+        <div id="dot-slider-query-bis">
+          <span class="dot-slider-query-bis" onclick="currentSlideQueryBis(1)"></span>
+          <span class="dot-slider-query-bis" onclick="currentSlideQueryBis(2)"></span>
+          <span class="dot-slider-query-bis" onclick="currentSlideQueryBis(3)"></span>
+          <span class="dot-slider-query-bis" onclick="currentSlideQueryBis(4)"></span>
+        </div>
+      </div>
+
       <!-- SECTION ABOUT US -->
 
       <section id="about-us">
