--- a/index.html
+++ b/index.html
@@ -123,26 +123,24 @@
             <img src="./assets/images/slider/slider-img-1.jpg">
             <img src="./assets/images/slider/slider-img-2.jpg">
             <img src="./assets/images/slider/slider-img-3.jpg">
-            <img src="./assets/images/slider/slider-img-4.jpg">
           </div>
 
 
 
           <div class="mySlides-query-bis fade">
+            <img src="./assets/images/slider/slider-img-4.jpg">
             <img src="./assets/images/slider/slider-img-1.jpg">
             <img src="./assets/images/slider/slider-img-2.jpg">
-            <img src="./assets/images/slider/slider-img-3.jpg">
-            <img src="./assets/images/slider/slider-img-4.jpg">
           </div>
 
         </div>
         <br>
 
         <div id="dot-slider-query-bis">
-          <span class="dot-slider-query-bis" onclick="currentSlideQueryBis(1)"></span>
-          <span class="dot-slider-query-bis" onclick="currentSlideQueryBis(2)"></span>
-          <span class="dot-slider-query-bis" onclick="currentSlideQueryBis(3)"></span>
-          <span class="dot-slider-query-bis" onclick="currentSlideQueryBis(4)"></span>
+          <span class="dot-query-bis" onclick="currentSlideQueryBis(1)"></span>
+          <span class="dot-query-bis" onclick="currentSlideQueryBis(2)"></span>
+          <span class="dot-query-bis" onclick="currentSlideQueryBis(3)"></span>
+          <span class="dot-query-bis" onclick="currentSlideQueryBis(4)"></span>
         </div>
       </div>
 
