--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
           <i class="fa-solid fa-bars"></i>
         </label>
         <ul>
-          <li><a href="#">HOME</a></li>
-          <li><a href="">ABOUT US</a></li>
-          <li><a href="">BLOG</a></li>
-          <li><a href="">MENU</a></li>
-          <li><a href="">NEWS</a></li>
-          <li><a href="">CONTACTS</a></li>
+          <li class="home-li-home"><a href="#">HOME</a></li>
+          <li class="border-button-nav home-li-about"><a href="">ABOUT US</a></li>
+          <li class="border-button-nav home-li-blog"><a href="">BLOG</a></li>
+          <li class="border-button-nav home-li-menu"><a href="">MENU</a></li>
+          <li class="border-button-nav home-li-news"><a href="">NEWS</a></li>
+          <li class="border-button-nav home-li-contacts"><a href="">CONTACTS</a></li>
         </ul>
       </nav>
     </header>
