--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="./assets/css/reset.css" />
   <link rel="stylesheet" href="./assets/css/master.css" />
   <link rel="stylesheet" href="./assets/css/style.css" />
+  <link rel="stylesheet" href="./assets/css/mediaquery.css">
   <title>Restaurant’s</title>
 </head>
 
@@ -223,39 +224,39 @@
 
       <!-- SECTION MENU    -->
       <section id="menu_price">
+        <div>
 
-        <div id="menu_container">
-          <h2>our <span>MENU</span> the <span>PRICE</span></h2>
-          <hr>
-          <p id="block_p">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nam id, delectus unde minima modi
+         <div id="menu_container">
+           <h2>our <span>MENU</span> the <span>PRICE</span></h2>
+           <hr>
+           <p id="block_p">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nam id, delectus unde minima modi
             officiis iure omnis illum porro voluptates aspernatur autem dolorem itaque obcaecati non inventore maxime
             excepturi quam.</p>
 
-        </div>
+          </div>
 
-        <h3 id="menu_price_title">featured <span>on the week</span></h3>
-        <ul id="menu_list">
-          <li>
-            <h3>Pancakes n' Such<span>$ 25.00</span>
+          <h3 id="menu_price_title">featured <span>on the week</span></h3>
+          <ul id="menu_list">
+           <li>
+             <h3>Pancakes n' Such<span>$ 25.00</span>
               <div class="bottom_border"></div>
-            </h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi autem ex suscipit explicabo ea in minus
+             </h3>
+             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi autem ex suscipit explicabo ea in minus
               velit
               enim. Debitis ullam consectetur natus quo ratione</p>
-          </li>
-          <li>
-            <h3>Homestyle Chicken Pot Pie<span>$ 10.00</span>
-              <div class="bottom_border"></div>
-            </h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi autem ex suscipit explicabo ea in minus
-              velit
+           </li>
+           <li>
+             <h3>Homestyle Chicken Pot Pie<span>$ 10.00</span>
+               <div class="bottom_border"></div>
+             </h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi autem ex suscipit explicabo ea in minus velit
               enim. Debitis ullam consectetur natus quo ratione</p>
-          </li>
-          <li>
-            <h3>Cereal, Panecillos y Frutas<span>$ 5.00</span>
+           </li>
+           <li>
+             <h3>Cereal, Panecillos y Frutas<span>$ 5.00</span>
               <div class="bottom_border"></div>
-            </h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi autem ex suscipit explicabo ea in minus
+             </h3>
+             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi autem ex suscipit explicabo ea in minus
               velit
               enim. Debitis ullam consectetur natus quo ratione</p>
           </li>
@@ -263,10 +264,10 @@
             <h3>Meat of Skewers<span>$ 15.00</span>
               <div class="bottom_border"></div>
             </h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi autem ex suscipit explicabo ea in minus
+             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi autem ex suscipit explicabo ea in minus
               velit
               enim. Debitis ullam consectetur natus quo ratione</p>
-          </li>
+         </li>
           <li>
             <h3>Steak with a Garlic and Parsley Risotto<span>$ 75.00</span>
               <div class="bottom_border"></div>
@@ -282,11 +283,12 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi autem ex suscipit explicabo ea in minus
               velit
               enim. Debitis ullam consectetur natus quo ratione</p>
-          </li>
-        </ul>
-        <div class="btn_container">
-          <a href="#" id="menu_btn">MORE INFO</a>
-        </div>
+           </li>
+         </ul>
+         <div class="btn_container">
+           <a href="#" id="menu_btn">MORE INFO</a>
+         </div>
+       </div>
       </section>
 
       <!-- NEWS SECTION -->
@@ -329,7 +331,8 @@
 
       <!-- SECTION FOOTER  -->
 
-      <section id="section-footer-info">
+      <footer>
+        <div id="section-footer-info">
         <div id="section-footer-container-info">
 
           <div>
@@ -369,6 +372,7 @@
               </p>
             </div>
           </div>
+        
         </div>
 
 
@@ -402,12 +406,13 @@
             </div>
           </div>
         </div>
-      </section>
-      <div id="footer-copywrite">
+      </div>
+      <footer>
+      <section id="footer-copywrite">
         <p>Copyright © 2014 - All Rights Reserved.Design and Developed By <br class="br-footer"> <span>
             Themefisher</span>
         </p>
-      </div>
+      </section>
     </main>
     <script src="./assets/Js/script.js"></script>
 </body>
